Transformed all needle and tick dimensions tà dependency properties.

--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RadialGauge/RadialGaugePage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RadialGauge/RadialGaugePage.xaml
@@ -25,7 +25,9 @@
                                   TickBrush="Gainsboro"
                                   ScaleTickBrush="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                                   UnitBrush="Black"
-                                  ValueBrush="Black" />
+                                  ValueBrush="Black"
+                                  NeedleWidth="{Binding NeedleWidth.Value, Mode=TwoWay}"
+                                  TickLength="{Binding TickLength.Value, Mode=TwoWay}" />
         </Grid>
     </Grid>
 </Page>
