SlidableListItem - updated sample page with color properties

--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
@@ -16,10 +16,10 @@
                                        LeftLabel="{Binding DataContext.LeftLabel.Value, ElementName=Root, Mode=OneWay}" 
                                        RightLabel="{Binding DataContext.RightLabel.Value, ElementName=Root, Mode=OneWay}" 
                                        HorizontalAlignment="Stretch"
-                                       LeftBackground="Green" 
-                                       RightBackground="Red"
-                                       LeftForeground ="White" 
-                                       RightForeground ="Black"
+                                       LeftBackground="{Binding DataContext.LeftBackground.Value, ElementName=Root, Mode=OneWay}" 
+                                       RightBackground="{Binding DataContext.RightBackground.Value, ElementName=Root, Mode=OneWay}"
+                                       LeftForeground ="{Binding DataContext.LeftForeground.Value, ElementName=Root, Mode=OneWay}" 
+                                       RightForeground ="{Binding DataContext.RightForeground.Value, ElementName=Root, Mode=OneWay}"
                                        MouseSlidingEnabled="{Binding DataContext.MouseSlidingEnabled.Value, ElementName=Root, Mode=OneWay}"
                                        LeftCommand="{x:Bind ToggleFavorite}"
                                        RightCommandRequested="SlidableListItem_RightCommandActivated"
