Integrating Dave design

--- a/Microsoft.Windows.Toolkit.SampleApp/App.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/App.xaml
@@ -7,6 +7,38 @@
     RequestedTheme="Light">
     
     <Application.Resources>
+        
+        <!-- Colors -->
+        <Color x:Key="Grey-01">#FF333333</Color>
+        <Color x:Key="Grey-02">#FF444444</Color>
+        <Color x:Key="Grey-03">#FF555555</Color>
+        <Color x:Key="Grey-04">#FFDDDDDD</Color>
+        <Color x:Key="Grey-05">#FFF0F0F0</Color>
+        <Color x:Key="White">#FFFFFFFF</Color>
+
+        <Color x:Key="Blue-01">#FF0078D7</Color>
+
+        <!-- Brushes -->
+        <SolidColorBrush x:Key="Brush-Grey-01" Color="{StaticResource Grey-01}"/>
+        <SolidColorBrush x:Key="Brush-Grey-02" Color="{StaticResource Grey-02}"/>
+        <SolidColorBrush x:Key="Brush-Grey-03" Color="{StaticResource Grey-03}"/>
+        <SolidColorBrush x:Key="Brush-Grey-04" Color="{StaticResource Grey-04}"/>
+        <SolidColorBrush x:Key="Brush-Grey-05" Color="{StaticResource Grey-05}"/>
+        <SolidColorBrush x:Key="Brush-White" Color="{StaticResource White}"/>
+
+        <SolidColorBrush x:Key="Brush-Blue-01" Color="{StaticResource Blue-01}"/>
+
+        <!-- Styles -->
+
+        <Style TargetType="TextBlock">
+            <Setter Property="Foreground" Value="{StaticResource Brush-Grey-01}"/>
+        </Style>
+
+        <Style TargetType="Button">
+            <Setter Property="Foreground" Value="{StaticResource Brush-Grey-01}"/>
+        </Style>
+        
+        
         <Style TargetType="controls:CodeRenderer">
             <Setter Property="Template">
                 <Setter.Value>
@@ -46,6 +78,11 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <DataTemplate x:Key="PivotHeaderTemplate">
+            <Grid>
+                <TextBlock Text="{Binding}"  FontSize="14"/>
+            </Grid>
+        </DataTemplate>
     </Application.Resources>
 
 </Application>
