--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/SlidableListItem/SlidableListItemPage.xaml
@@ -34,7 +34,7 @@
         </DataTemplate>
     </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Name="Root">
+    <Grid Background="{StaticResource Brush-Grey-05}" Name="Root">
         <ListView x:Name="listView" ItemTemplate="{StaticResource EmailsItemTemplate}" ItemsSource="{x:Bind _items, Mode=OneWay}" SelectionMode="None" IsItemClickEnabled="False">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
