--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Bing Service/BingPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Bing Service/BingPage.xaml
@@ -25,8 +25,8 @@
             </Grid>
         </DataTemplate>
     </Page.Resources>
-    
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+    <Grid Background="{StaticResource Brush-Grey-05}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
