--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Carousel/CarouselPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Carousel/CarouselPage.xaml
@@ -18,7 +18,7 @@
         </DataTemplate>
     </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{StaticResource Brush-Grey-05}">
         <controls:Carousel
                 Name="control"
                 ContentTemplate="{StaticResource PhotosTemplate}"
