--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
@@ -23,7 +23,7 @@
         </DataTemplate>
     </Page.Resources>
 
-    <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{StaticResource Brush-Grey-05}">
         <controls:VariableSizedGridView
             Name="control"
             Margin="0"
