--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/PullToRefreshListView/PullToRefreshListViewPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/PullToRefreshListView/PullToRefreshListViewPage.xaml
@@ -9,7 +9,7 @@
     xmlns:data="using:Microsoft.Windows.Toolkit.SampleApp.Models"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{StaticResource Brush-Grey-05}">
         <controls:PullToRefreshListView x:Name="listView"
                                         ItemsSource="{x:Bind _items}"
                                         OverscrollLimit="{Binding OverscrollLimit.Value, Mode=OneWay}"
