--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RadialGauge/RadialGaugePage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/RadialGauge/RadialGaugePage.xaml
@@ -6,7 +6,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{StaticResource Brush-Grey-05}">
         <Grid VerticalAlignment="Center"
               HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
