--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ResponsiveGridView/ResponsiveGridViewPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ResponsiveGridView/ResponsiveGridViewPage.xaml
@@ -19,7 +19,7 @@
 	</Page.Resources>
 
 
-	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	<Grid Background="{StaticResource Brush-Grey-05}">
 		<controls:ResponsiveGridView
           Name="control"
           ItemHeight="{Binding ItemHeight.Value}"
