--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/VariableSizedGridView/VariableSizedGridViewPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/VariableSizedGridView/VariableSizedGridViewPage.xaml
@@ -21,7 +21,7 @@
         </DataTemplate>
     </Page.Resources>
 
-	<Grid Background="LightGray">
+	<Grid Background="{StaticResource Brush-Grey-05}">
         <controls:VariableSizedGridView
             Name="control"
             Margin="5"
