--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
@@ -4,24 +4,22 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:bing="using:Microsoft.Windows.Toolkit.Services.Bing"
+    xmlns:facebook="using:Microsoft.Windows.Toolkit.Services.Facebook"
     mc:Ignorable="d">
     <Page.Resources>
-        <DataTemplate x:Key="BingSchemaTemplate" x:DataType="bing:BingSchema">
-            <Grid Margin="0,5,10,5">
+        <DataTemplate x:Key="FacebookSchemaTemplate" x:DataType="facebook:FacebookSchema">
+            <Grid Margin="0,5,10,5" Height="100">
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
-                <TextBlock Text="{x:Bind Title}" Grid.Row="0" Grid.Column="0" FontWeight="Bold" TextTrimming="CharacterEllipsis"></TextBlock>
-                <TextBlock Text="{x:Bind Published}" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right"></TextBlock>
-                <TextBlock Text="{x:Bind Summary}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" TextWrapping="Wrap"></TextBlock>
-                <HyperlinkButton Content="{x:Bind Link}" NavigateUri="{x:Bind Link}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"></HyperlinkButton>
+                <Image Source="{Binding Full_Picture}" Grid.RowSpan="2" Grid.Column="0" Stretch="UniformToFill"></Image>
+                <TextBlock Text="{x:Bind Message}" Grid.Row="0" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"></TextBlock>
+                <TextBlock Text="{x:Bind CreatedTime}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="16" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" FontWeight="ExtraLight"></TextBlock>
             </Grid>
         </DataTemplate>
     </Page.Resources>
@@ -32,10 +30,10 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Vertical" Margin="10">
-            <TextBox Header="Request:" x:Name="SearchText" Text="UWP"></TextBox>
-            <Button Content="Search" x:Name="SearchButton" Margin="0,10,0,0"></Button>
+            <TextBox Header="AppID:" x:Name="AppIDText"></TextBox>
+            <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="0,10,0,0"></Button>
         </StackPanel>
-        <ListView Grid.Row="1" ItemTemplate="{StaticResource BingSchemaTemplate}" x:Name="ListView">
+        <ListView Grid.Row="1" ItemTemplate="{StaticResource FacebookSchemaTemplate}" x:Name="ListView">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
