--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
@@ -7,7 +7,7 @@
     xmlns:facebook="using:Microsoft.Windows.Toolkit.Services.Facebook"
     mc:Ignorable="d">
     <Page.Resources>
-        <DataTemplate x:Key="FacebookSchemaTemplate" x:DataType="facebook:FacebookSchema">
+        <DataTemplate x:Key="FacebookSchemaTemplate" x:DataType="facebook:FacebookPost">
             <Grid Margin="0,5,10,5" Height="100">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"></ColumnDefinition>
@@ -19,7 +19,7 @@
                 </Grid.RowDefinitions>
                 <Image Source="{Binding Full_Picture}" Grid.RowSpan="2" Grid.Column="0" Stretch="UniformToFill"></Image>
                 <TextBlock Text="{x:Bind Message}" Grid.Row="0" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"></TextBlock>
-                <TextBlock Text="{x:Bind CreatedTime}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="16" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" FontWeight="ExtraLight"></TextBlock>
+                <TextBlock Text="{x:Bind Created_Time}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="16" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" FontWeight="ExtraLight"></TextBlock>
             </Grid>
         </DataTemplate>
     </Page.Resources>
@@ -27,13 +27,31 @@
     <Grid Background="{StaticResource Brush-Grey-05}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Vertical" Margin="10">
-            <TextBox Header="AppID:" x:Name="AppIDText"></TextBox>
-            <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="0,10,0,0"></Button>
-        </StackPanel>
-        <ListView Grid.Row="1" ItemTemplate="{StaticResource FacebookSchemaTemplate}" x:Name="ListView">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Vertical" Margin="10">
+                <TextBox Header="AppID:" x:Name="AppIDText"></TextBox>
+                <StackPanel Orientation="Horizontal">
+                    <ComboBox x:Name="QueryType" Header="Type:"></ComboBox>
+                    <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="10,0,0,0" VerticalAlignment="Bottom"></Button>
+                </StackPanel>
+            </StackPanel>
+            <Image Grid.Column="1" x:Name="ProfileImage" Source="{Binding Url}" VerticalAlignment="Top" Margin="5"></Image>
+        </Grid>
+        <Border Margin="10" Grid.Row="1" x:Name="ShareBox" BorderThickness="1" BorderBrush="#555555" Padding="5">
+            <StackPanel Orientation="Vertical">
+                <TextBox Header="Title:" x:Name="TitleText"></TextBox>
+                <TextBox Header="Description:" x:Name="DescriptionText"></TextBox>
+                <Button Content="Share" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,10,0,0"></Button>
+            </StackPanel>
+        </Border>
+        <ListView Grid.Row="2" ItemTemplate="{StaticResource FacebookSchemaTemplate}" x:Name="ListView">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
