--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/ImageEx/ImageExPage.xaml
@@ -14,6 +14,8 @@
                     IsCacheEnabled="True"
                     Source="{Binding Thumbnail}"
                     Stretch="UniformToFill"
+                    PlaceholderSource="/Assets/Photos/ImageExPlaceholder.jpg"
+                    PlaceholderStretch="UniformToFill"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"/>  
                 <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center"
