--- a/Microsoft.Windows.Toolkit.UI.Controls/ImageEx/ImageEx.xaml
+++ b/Microsoft.Windows.Toolkit.UI.Controls/ImageEx/ImageEx.xaml
@@ -10,7 +10,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="controls:ImageEx">
                     <Grid Background="{TemplateBinding Background}">
-                        <Image Name="PlaceholderImage" Opacity="0.0" HorizontalAlignment="{TemplateBinding HorizontalAlignment}" VerticalAlignment="{TemplateBinding VerticalAlignment}" />
+                        <Image Name="PlaceholderImage" Opacity="0.0" Source="{TemplateBinding PlaceholderSource}" Stretch="{TemplateBinding PlaceholderStretch}" HorizontalAlignment="{TemplateBinding HorizontalAlignment}" VerticalAlignment="{TemplateBinding VerticalAlignment}" />
                         <Image Name="Image" Opacity="0.0" Stretch="{TemplateBinding Stretch}" HorizontalAlignment="{TemplateBinding HorizontalAlignment}" VerticalAlignment="{TemplateBinding VerticalAlignment}" NineGrid="{TemplateBinding NineGrid}"/>
                         <ProgressRing Name="Progress" Margin="16" IsActive="True" Background="Transparent" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Grid>
