--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
@@ -4,10 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:facebook="using:Microsoft.Windows.Toolkit.Services.Facebook"
+    xmlns:twitter="using:Microsoft.Windows.Toolkit.Services.Twitter"
     mc:Ignorable="d">
     <Page.Resources>
-        <DataTemplate x:Key="FacebookSchemaTemplate" x:DataType="facebook:FacebookPost">
+        <DataTemplate x:Key="TwitterSchemaTemplate" x:DataType="twitter:Tweet">
             <Grid Margin="0,5,10,5" Height="100">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"></ColumnDefinition>
@@ -17,9 +17,9 @@
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
-                <Image Source="{Binding Full_Picture}" Grid.RowSpan="2" Grid.Column="0" Stretch="UniformToFill"></Image>
-                <TextBlock Text="{x:Bind Message}" Grid.Row="0" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"></TextBlock>
-                <TextBlock Text="{x:Bind Created_Time}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="16" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" FontWeight="ExtraLight"></TextBlock>
+                <Image Grid.RowSpan="2" Grid.Column="0" Source="{Binding UserProfileImageUrl}" Stretch="UniformToFill"/>
+                <TextBlock Text="{x:Bind Text}" Grid.Row="0" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" TextWrapping="Wrap" TextTrimming="CharacterEllipsis"></TextBlock>
+                <TextBlock Text="{x:Bind CreationDateTime}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="16" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" FontWeight="ExtraLight"></TextBlock>
             </Grid>
         </DataTemplate>
     </Page.Resources>
@@ -36,22 +36,20 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Vertical" Margin="10">
-                <TextBox Header="AppID:" x:Name="AppIDText"></TextBox>
-                <StackPanel Orientation="Horizontal">
-                    <ComboBox x:Name="QueryType" Header="Type:"></ComboBox>
-                    <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="10,0,0,0" VerticalAlignment="Bottom"></Button>
-                </StackPanel>
+                <TextBox Header="Consumer Key:" x:Name="ConsumerKey"></TextBox>
+                <TextBox Header="Consumer Secret:" x:Name="ConsumerSecret"></TextBox>
+                <TextBox Header="Callback URI:" x:Name="CallbackUri"></TextBox>
+                <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
             </StackPanel>
             <Image Grid.Column="1" x:Name="ProfileImage" Source="{Binding Url}" VerticalAlignment="Top" Margin="5"></Image>
         </Grid>
         <Border Margin="10" Grid.Row="1" x:Name="ShareBox" BorderThickness="1" BorderBrush="#555555" Padding="5">
             <StackPanel Orientation="Vertical">
-                <TextBox Header="Title:" x:Name="TitleText"></TextBox>
-                <TextBox Header="Description:" x:Name="DescriptionText"></TextBox>
+                <TextBox Header="Tweet:" x:Name="TweetText"></TextBox>
                 <Button Content="Share" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,10,0,0"></Button>
             </StackPanel>
         </Border>
-        <ListView Grid.Row="2" ItemTemplate="{StaticResource FacebookSchemaTemplate}" x:Name="ListView">
+        <ListView Grid.Row="2" ItemTemplate="{StaticResource TwitterSchemaTemplate}" x:Name="ListView">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
