--- a/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
+++ b/Microsoft.Windows.Toolkit.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
@@ -47,6 +47,8 @@
             <StackPanel Orientation="Vertical">
                 <TextBox Header="Tweet:" x:Name="TweetText"></TextBox>
                 <Button Content="Share" x:Name="ShareButton" Click="ShareButton_OnClick" Margin="0,10,0,0"></Button>
+                <TextBox Header="Search tag:" x:Name="TagText"></TextBox>
+                <Button Content="Search" x:Name="SearchButton" Click="SearchButton_OnClick" Margin="0,10,0,0"></Button>
             </StackPanel>
         </Border>
         <ListView Grid.Row="2" ItemTemplate="{StaticResource TwitterSchemaTemplate}" x:Name="ListView">
